--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Legal Lens</title>
+  <title>Legal Nexus</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
     header { background-color: #1a237e; color: white; padding: 20px; text-align: center; }
@@ -17,7 +17,7 @@
 <body>
 
 <header>
-  <h1>Legal Lens</h1>
+  <h1>Legal Nexus</h1>
   <p>Explore insights from a law student's lens</p>
 </header>
 
